# zesven

./: .gitignore  AGENTS.md  LICENSE-APACHE  README.md  mise.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/.vitepress/theme/components/: ThreeStateAppearance.vue
docs/7z/: 00-philosophy.md  01-glossary.md  02-archive-structure.md  03-signature-header.md  04-data-encoding.md  05-header-structure.md  06-pack-info.md  07-unpack-info.md  08-substreams-info.md  09-files-info.md  10-compression-methods.md  11-filters.md  12-encryption.md  13-solid-archives.md  14-multi-volume.md  15-sfx-archives.md  16-timestamps-attributes.md  17-security.md  18-error-conditions.md  index.md
docs/7z/appendix/: a-property-ids.md  b-method-ids.md  c-crc-algorithm.md  d-compatibility.md
docs/rs/: cookbook.md  index.md
docs/rs/advanced/: editing.md  index.md  multi-volume.md  recovery.md  sfx.md  wasm.md
docs/rs/async/: cancellation.md  index.md  tokio-integration.md
docs/rs/encryption/: creating-encrypted.md  index.md  reading-encrypted.md
docs/rs/reading/: extracting.md  index.md  opening-archives.md  progress-callbacks.md  selective-extraction.md
docs/rs/reference/: error-handling.md  feature-flags.md  index.md  platform-support.md
docs/rs/safety/: index.md  path-safety.md  resource-limits.md
docs/rs/streaming/: config.md  index.md  memory-management.md
docs/rs/writing/: appending.md  compression-options.md  creating-archives.md  index.md  solid-archives.md
rs/: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
rs/examples/: create_archive.rs  create_encrypted.rs  extract_selective.rs  progress_callback.rs
rs/fuzz/: Cargo.toml  README.md
rs/fuzz/fuzz_targets/: archive_open.rs  archive_path.rs
rs/pkg/: zesven.d.ts
rs/src/: archive_path.rs  async_codec.rs  async_options.rs  async_password.rs  async_read.rs  async_write.rs  checksum.rs  error.rs  fs.rs  lib.rs  ownership.rs  progress.rs  s3fifo.rs  safety.rs  timestamp.rs
rs/src/codec/: bcj2.rs  bcj_encoders.rs  brotli.rs  bzip2.rs  copy.rs  deflate.rs  fast_lzma2.rs  fast_lzma2_encode.rs  filters.rs  lizard.rs  lz4.rs  lz5.rs  lzma.rs  lzma2_parallel.rs  lzma_context.rs  lzma_rc.rs  mod.rs  parallel_frames.rs  ppmd.rs  radix_mf.rs  skippable_frame.rs  zstd.rs
rs/src/crypto/: mod.rs  password.rs  properties.rs
rs/src/edit/: editor.rs  mod.rs  operation.rs
rs/src/format/: detect.rs  files.rs  header.rs  mod.rs  parser.rs  reader.rs  streams.rs
rs/src/hardlink/: mod.rs  tracker.rs
rs/src/ntfs/: mod.rs  streams.rs
rs/src/read/: archive_open.rs  archive_query.rs  archive_test.rs  decompression.rs  destination.rs  entries.rs  entry.rs  extraction.rs  info.rs  metadata.rs  mod.rs  multivolume.rs  options.rs  path_safety.rs  solid_blocks.rs
rs/src/recovery/: mod.rs  scanner.rs
rs/src/sfx/: config.rs  mod.rs  stub.rs
rs/src/stats/: mod.rs
rs/src/streaming/: archive.rs  config.rs  iterator.rs  memory.rs  mod.rs  parallel.rs  pool.rs  progressive.rs  random.rs  sink.rs  solid.rs
rs/src/volume/: config.rs  mod.rs  reader.rs  unified.rs  writer.rs
rs/src/wasm/: archive.rs  async_api.rs  file.rs  memory.rs  mod.rs  streams.rs  writer.rs
rs/src/write/: append.rs  codecs.rs  compression.rs  encoding_utils.rs  entry_compression.rs  entry_input.rs  header_encode.rs  header_encryption.rs  metadata_encode.rs  mod.rs  options.rs  writer_init.rs
rs/tests/: async_tests.rs  cli.rs  codec_combinations.rs  editing.rs  filter_roundtrip.rs  hardlink.rs  malformed_archives.rs  multivolume.rs  ntfs.rs  ownership.rs  password_tests.rs  proptest_tests.proptest-regressions  proptest_tests.rs  recovery.rs  reference_archives.rs  resource_limits.rs  roundtrip.rs  sfx.rs  stats.rs  streaming.rs  zstdmt_frames.rs
rs/tests/common/: mod.rs
rs/tests/data/bcj2/: simple_bcj2.7z
rs/tests/fixtures/: symlink_test.7z
