[package]
name = "zesven"
version = "1.0.0"
authors = ["Andrey Akinshin <andrey.akinshin@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A pure Rust implementation of the 7z archive format"
license = "MIT OR Apache-2.0"
keywords = ["7z", "archive", "compression", "lzma", "7zip"]
categories = ["compression", "encoding"]
repository = "https://github.com/AndreyAkinshin/zesven"
readme = "../README.md"

[features]
default = ["lzma", "lzma2", "deflate", "bzip2", "ppmd", "aes", "parallel"]
lzma = ["dep:lzma-rust2"]
lzma2 = ["lzma"]
deflate = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
ppmd = ["dep:ppmd-rust"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
aes = ["dep:aes", "dep:cbc", "dep:sha2", "dep:zeroize"]
parallel = ["dep:rayon"]

# Fast LZMA2 encoder with radix match-finder (experimental)
# Uses radix-tree based match-finding for 1.5-3x faster compression
fast-lzma2 = ["lzma"]

# Regex-based entry selection support
regex = ["dep:regex"]

# System info for RAM auto-detection
sysinfo = ["dep:sysinfo"]

# CLI tool feature
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:indicatif",
    "dep:rpassword",
    "dep:glob",
    "dep:serde_json",
    "dep:console",
    "dep:dialoguer",
    "dep:ctrlc",
    "dep:walkdir",
]

# Async API support with Tokio
async = ["dep:tokio", "dep:tokio-util", "dep:async-compression", "dep:pin-project-lite", "dep:futures"]

# WASM/Browser support
# Note: wasm feature is mutually exclusive with parallel (WASM is single-threaded)
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "getrandom/js",
]

# Default feature set for WASM builds (no parallel, no async/tokio)
wasm-default = ["lzma", "lzma2", "deflate", "bzip2", "ppmd", "aes", "wasm"]

[dependencies]
# Core dependencies (always included)
crc32fast = "1"
crc64fast = "1"
thiserror = "2"
lru = "0.12"
log = "0.4"
filetime = "0.2"

# Optional LZMA support
lzma-rust2 = { version = "0.15", optional = true }

# Optional Deflate support (using zlib-rs backend for performance)
flate2 = { version = "1", optional = true, default-features = false, features = ["zlib-rs"] }

# Optional BZip2 support
bzip2 = { version = "0.6", optional = true }

# Optional PPMd support
ppmd-rust = { version = "1", optional = true }

# Optional modern codec support
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
brotli = { version = "6", optional = true }

# Optional AES encryption support
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }
zeroize = { version = "1", optional = true }

# Optional parallel processing support
rayon = { version = "1.10", optional = true }

# Optional regex entry selector support
regex = { version = "1", optional = true }

# Optional system info for RAM detection
sysinfo = { version = "0.32", optional = true, default-features = false, features = ["system"] }

# Optional CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "string"], optional = true }
clap_complete = { version = "4.5", optional = true }
indicatif = { version = "0.17", optional = true }
rpassword = { version = "7.3", optional = true }
glob = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
console = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
ctrlc = { version = "3.4", optional = true }
walkdir = { version = "2.5", optional = true }

# Optional async API support with Tokio
tokio = { version = "1.43", features = ["fs", "io-util", "sync", "rt", "macros", "time", "rt-multi-thread"], optional = true }
tokio-util = { version = "0.7", features = ["io", "compat"], optional = true }
async-compression = { version = "0.4", features = ["tokio", "lzma", "deflate", "bzip2"], optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

# Optional WASM/Browser support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3.70", features = [
    "File",
    "Blob",
    "FileReader",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamDefaultController",
    "WritableStreamDefaultWriter",
    "Window",
    "console",
], optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
rand = "0.8"
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

# WASM-specific configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure these compile for WASM without std::fs leaking through

# CLI binary (requires cli feature)
[[bin]]
name = "zesven"
path = "src/bin/cli/main.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
